--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,6 @@
-# Maven specific files
 target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-.mvn/wrapper/maven-wrapper.jar
-!src/main/resources
-
-# IntelliJ IDEA files
+target/*
+src/test
 .idea/
+.idea/*
 *.iml
-*.ipr
-*.iws
-.idea_modules/
-out/
-
-# Compiled Java bytecode
-*.class
-
-# macOS specific files
-.DS_Store
-
-# Windows specific files
-Thumbs.db
